--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         
         // ADD YOUR IMAGE URLS HERE - Replace the empty strings with your image URLs
         const productImages = [
-            'IMG_20251119_104649.jp', // Replace with your first image URL
+            'IMG_20251119_104649.jpg', // Replace with your first image URL
             'IMG_20251119_104658.jpg'   // Replace with your second image URL
         ];
 
